--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -26,53 +26,36 @@
 	<div id="home-hero">
 		<h1>!Welcome!</h1>
 	</div>
-<main class="index">
-    <div class="container-fluid">
+</header>
+ <main class="portfolio">
+      <div class="container-fluid">
+	  <h1>My Projects</h1>
+	  <h2>pssh- click the titles for the code</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="artist/profile.jpg" class="img-fluid img2" alt="banner">
+				<a href="https://github.com/MahadAbdishakur/Puppies.git">Puppies</a>
+				<img src="artist/animal2.png" class="img-fluid img2" alt="banner">
             </div>
             <div class="col-md-6">
-                <div class="summary">
-                    <h1>About Me</h1>
-                    <p>
-                        My name is Mahad and I study Web Design and Web Programming at Saint Paul College in St. Paul, Minnesota. My planned graduation date is May 2024 with the Web Design and Web Development Certificates. I made this website as a portfolio of my skills developing websites.
-                    </p>
-                    <p>
-                        I have taken the following classes at Saint Paul College:
-                    </p>
-                    <ul>
-                        <li>Web Fundamentals, where I learned HTML and CSS</li>
-                        <li>Computer Science and Information Systems</li>
-                    </ul>
-                    <p>
-                        Next semester I will be taking Client Side Programming and Web Design. My hobbies include video gaming, reading light novels, programming, modding video games, creating fan pages, trying new things, and even gardening.
-                    </p>
-                </div>
+				<a href="https://github.com/MahadAbdishakur/animals.git">Animal Photography</a>
+				<img src="artist/animal1.png" class="img-fluid img2" alt="banner">
+            </div>
+			<div class="col-md-6">
+				<a href="https://github.com/MahadAbdishakur/grooveguitar.git">Groove Guitar</a>
+				<img src="artist/groove1.png" class="img-fluid img2" alt="banner">
+            </div>
+			<div class="col-md-6">
+				<a href="https://github.com/MahadAbdishakur/personal-project.git">Personal project</a>
+				<img src="artist/onepiece.png" class="img-fluid img2" alt="banner">
             </div>
         </div>
+        </div>
+        </div>
     </div>
-</main>
-<h1>Pictures of my past projects</h1>
-<div class = "photo">
-	<div class="gallery">
-		<div class="preview">
-			<img id="preview" src="artist/animal2.png" style="display:block;margin:0 auto;" alt=""  height="600" width="800"/>
-		</div>
-		<div class="gallery-thumbnails" style="margin:0 auto;text-align:center">
-			<img onclick="document.getElementById('preview').src=document.getElementById('img1').src" id="img1" src="artist/onepiece.png" alt="" />
-			<img onclick="document.getElementById('preview').src= document.getElementById('img2').src;" id="img2" src="artist/onepiece2.png" alt=""  />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img3').src;" id="img3" src="artist/onepiece3.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img4').src;" id="img4" src=	"artist/onepiece4.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img5').src;" id="img5" src="artist/onepiece5.png" alt=""  />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img6').src;" id="img6" src="artist/animal1.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img7').src;" id="img7" src="artist/animal2.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img8').src;" id="img8" src="artist/groove1.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img9').src;" id="img9" src="artist/groove2.png" alt="" />
-		</div>
+    </main>
+<div id="home-hero12">
+	<h1>Explore my other pages!</h1>
 	</div>
-</div>
-
 <footer>
     <div class="container-fluid">
         <div class="row">
@@ -106,7 +89,6 @@
         </div>
     </div>
 </footer>
-</main>
 <!--jQuery, Popper, and Bootstrap Javascript files-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
