--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -27,106 +27,131 @@
 		<h1>!Welcome!</h1>
 	</div>
 </header>
-<main>
-	<h1>Resume</h1>
-	<hr>
-	<div class ='about'>
-	<h3>Mahad a programer</h3>
-<h3><b>Cell:</b> 651-000-0000</h3>
-<h3><b>Email:</b> Mahadabdishakur@gmail.com</h3>
-<h3><b>Website:</b> www.Mahadabdishakur.com</h3>
-<h2><b>Objective</b></h2>
-<p><hr>I am a Full-time student with 2 jobs and seeking a paid internship in web development. I am available part-time immediately and full-time in a 2025. Ive studied computer science and web development and have even praticipated in a bootcamp which is listed below. 
-</hr></p>
-<h2><b>PROFESSIONAL EXPERIENCE</b></h2>
-<ul>
-<hr>
-<li>Devmountain | Lehi, UT	<br> November 2021 - February 2022 <br>
-Web Developer / Software Engineer (student)<hr>
-</li>
-<li>BestBuy| Roseville, MN	<br> November 2018 - March 2021<br>
-West Coast Senior Account Executive<hr>
-</li>
-<li>DailyHomeCare| Saint paul, Minnesota <br>	May 2017 - June 2020<br>
-PCA<hr>
-</li>
-<li>Securitas| Minneapolis, Minnesota <br>
-2021-2022<br> Security Officer<hr>
-</li>
-<li>Avivo village| Minneapolis Minnesota <br>  2022— Current<br>
-Resident Advocate<hr>                                              
-</li>
-<li>PPL| Minneapolis Minnesota <br> 2023-current<br> Lobby assistant<hr></li>
-<li>LivingHope | Minneapolis Minnesota <br> 2023-2024 <br> PCA <hr></li>
-</hr>
-</ul>	
-<h2><b>Skills</b></h2>
-<p><hr>Javascript | React | Redux | NodeJs | Express | PostgreSQL | OAuth | Massive | Bcrypt | AWS | CSS | Git | Github | Postman | SQL Tabs | Heroku | HTML5 |  Nginx |  Axios  | Python|SCSS
-</hr></p>
-<h2><b>Projects</b></h2>
-<h5>One piece fan page</h5>
-<ul>
-<li>https://github.com/MahadAbdishakur/personal-project.git</li>
-<li>Javascript | HTML5 | NodeJS | Express | PostgreSQL | CSS |</li>
-<li>Developed a Fan page website for an anime called one piece in commemoration of its 1000th episode
-</li>
-<li>Provided different views- one page is dedicated to different storyLines and arcs- second page dedicated to different characters
-</li>
-<li>Introduced modal boxes to the character page, utilizing it to display additional information about selected characters 
-</li>
-</ul>
+ <main class="resume">
+        <div class="container-fluid">
+            <h1>Resume</h1>
+            <hr>
+            <div class="about">
+                <h3>Mahad Abdishakur - Programmer</h3>
+                <h4><b>Cell:</b> 651-000-0000</h4>
+                <h4><b>Email:</b> Mahadabdishakur@gmail.com</h4>
+                <h4><b>Website:</b> <a href="http://www.Mahadabdishakur.com">www.Mahadabdishakur.com</a></h4>
 
-<h5>Capstone project </h5>
-<ul>
-<li>https://youtu.be/PD5JdCIrlRM</li>
-<li>React | HTML5 | NodeJS | Express | PostgreSQL | CSS | Javascript |
-</li>
-<li>Designed a memory game using react for the first time
-</li>
-<li>All art shown on the app was designed and created by me. Prior to the start of the project I had no interactions with the creative arts
-</li>
-<li>Integrated a register and login view and added a cookie feature that automatically deletes created users in a 24 hour interval
-</li>
-<li>Integrated a shuffle deck feature and added some different decks with different themes to add replayability to my project
-</li>
-</ul>
+                <h2><b>Objective</b></h2>
+                <p>
+                    I am a full-time student with two jobs, seeking a paid internship in web development. I am available part-time immediately and full-time in 2025. I have studied computer science and web development and have participated in a bootcamp.
+                </p>
 
-<h2>Education</h2>
-<h5>High School Diploma <br> Central highschool<br> Saint paul, Minnesota<hr></h5>
-<h5>Devmountain <br> Lehi, UT	<br> Certificate Web Development Graduated February 2022 <br>
-Web Development Program <hr>
-</h5>
-</div>
-	</main>
+                <h2><b>Professional Experience</b></h2>
+                <ul>
+                    <li>
+                        <h5>Devmountain | Lehi, UT</h5>
+                        <p>November 2021 - February 2022</p>
+                        <p>Web Developer / Software Engineer (student)</p>
+                    </li>
+                    <li>
+                        <h5>BestBuy | Roseville, MN</h5>
+                        <p>November 2018 - March 2021</p>
+                        <p>West Coast Senior Account Executive</p>
+                    </li>
+                    <li>
+                        <h5>DailyHomeCare | Saint Paul, Minnesota</h5>
+                        <p>May 2017 - June 2020</p>
+                        <p>PCA</p>
+                    </li>
+                    <li>
+                        <h5>Securitas | Minneapolis, Minnesota</h5>
+                        <p>2021-2022</p>
+                        <p>Security Officer</p>
+                    </li>
+                    <li>
+                        <h5>Avivo Village | Minneapolis, Minnesota</h5>
+                        <p>2022—Current</p>
+                        <p>Resident Advocate</p>
+                    </li>
+                    <li>
+                        <h5>PPL | Minneapolis, Minnesota</h5>
+                        <p>2023-Current</p>
+                        <p>Lobby Assistant</p>
+                    </li>
+                    <li>
+                        <h5>LivingHope | Minneapolis, Minnesota</h5>
+                        <p>2023-2024</p>
+                        <p>PCA</p>
+                    </li>
+                </ul>
+
+                <h2><b>Skills</b></h2>
+                <p>
+                    Javascript | React | Redux | NodeJs | Express | PostgreSQL | OAuth | Massive | Bcrypt | AWS | CSS | Git | Github | Postman | SQL Tabs | Heroku | HTML5 | Nginx | Axios | Python | SCSS
+                </p>
+
+                <h2><b>Projects</b></h2>
+                <div class="project">
+                    <h5>One Piece Fan Page</h5>
+                    <ul>
+                        <li><a href="https://github.com/MahadAbdishakur/personal-project.git">GitHub Repo</a></li>
+                        <li>Javascript | HTML5 | NodeJS | Express | PostgreSQL | CSS</li>
+                        <li>Developed a fan page website for an anime called One Piece in commemoration of its 1000th episode.</li>
+                        <li>Provided different views - one page is dedicated to different storylines and arcs; second page dedicated to different characters.</li>
+                        <li>Introduced modal boxes to the character page, utilizing it to display additional information about selected characters.</li>
+                    </ul>
+
+                    <h5>Capstone Project</h5>
+                    <ul>
+                        <li><a href="https://youtu.be/PD5JdCIrlRM">YouTube Demo</a></li>
+                        <li>React | HTML5 | NodeJS | Express | PostgreSQL | CSS | Javascript</li>
+                        <li>Designed a memory game using React for the first time.</li>
+                        <li>All art shown on the app was designed and created by me.</li>
+                        <li>Integrated a register and login view and added a cookie feature that automatically deletes created users in a 24-hour interval.</li>
+                        <li>Integrated a shuffle deck feature and added different decks with different themes to add replayability to the project.</li>
+                    </ul>
+                </div>
+
+                <h2><b>Education</b></h2>
+                <h5>High School Diploma - Central High School, Saint Paul, Minnesota</h5>
+                <h5>Devmountain - Lehi, UT</h5>
+                <p>Certificate in Web Development - Graduated February 2022</p>
+                <p>Web Development Program</p>
+            </div>
+        </div>
+    </main>
 <div id="home-hero12">
 	<h1>Explore my other pages!</h1>
 	</div>
- <div class="container-fluid">
+<footer>
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
-                <ul>
-                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:admin@websitedeluxe.com">Email Us</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <ul>
+                <h4>Contact Us</h4>
+                <ul class="list-unstyled">
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:admin@websitedeluxe.com">admin@websitedeluxe.com</a></li>
                     <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:8008675309">(800) 867-5309</a></li>
+                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:8008675309">Text Us PLEASE!</a></li>
                 </ul>
             </div>
             <div class="col-sm-4">
-                <ul>
-                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:8008675309">Text Us PLEASE!</a></li>
+                <h4>About Us</h4>
+                <p>We are a web development company based in St. Paul, Minnesota. Our mission is to deliver high-quality websites and digital solutions.</p>
+            </div>
+            <div class="col-sm-4">
+                <h4>Follow Us</h4>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <span><small>&copy; MAHAD ABDISHAKUR. All rights reserved.</small></span>
+            <div class="col-sm-12 text-center">
+                <hr>
+                <p>&copy; 2024 MAHAD ABDISHAKUR. All rights reserved. | Built with <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></p>
             </div>
         </div>
     </div>
 </footer>
-
 <!--jQuery, Popper, and Bootstrap Javascript files-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
