--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
-	<meta name="description" content="i'm Mahad, a coding student, game developer, video editor and more, click for more.">
+	<meta name="description" content="i'm Mahad, this is my resume page, outlining my schooling, extra schooling, projects and past jobs">
 	<title>Mahad::Resume</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<div class = "mahad">
-			<img src="artist/mahad.png" height="100px" width="300px" alt="mahad">
+			<img src="images/mahad.png" height="100px" width="300px" alt="mahad">
 		</div>
 	</header>
 	<nav>
@@ -23,126 +23,130 @@
 			<li><a href="portfolio.html">Portfolio</a></li>
 		</ul>
 	</nav>
-	<div id="home-hero">
-		<h1>!Welcome!</h1>
-	</div>
 </header>
  <main class="resume">
         <div class="container-fluid">
             <h1>Resume</h1>
             <hr>
             <div class="about">
-                <h3>Mahad Abdishakur - Programmer</h3>
-                <h4><b>Cell:</b> 651-000-0000</h4>
-                <h4><b>Email:</b> Mahadabdishakur@gmail.com</h4>
-                <h4><b>Website:</b> <a href="http://www.Mahadabdishakur.com">www.Mahadabdishakur.com</a></h4>
+                <h2>Mahad Abdishakur - Programmer</h2>
+                <h2><b>Cell:</b> 651-000-0000</h2>
+                <h2><b>Email:</b> Mahadabdishakur@gmail.com</h2>
+                <h2><b>Website:</b> <a href="https://mahadabdishakur.github.io/MahadAbdishakur/index.html">www.Mahadabdishakur.com</a></h2>
 
-                <h2><b>Objective</b></h2>
+                <h1><b>Objective</b></h1>
                 <p>
                     I am a full-time student with two jobs, seeking a paid internship in web development. I am available part-time immediately and full-time in 2025. I have studied computer science and web development and have participated in a bootcamp.
                 </p>
 
-                <h2><b>Professional Experience</b></h2>
+                <h1><b>Professional Experience</b></h1>
                 <ul>
                     <li>
-                        <h5>Devmountain | Lehi, UT</h5>
+                        <p>Devmountain | Lehi, UT</p>
                         <p>November 2021 - February 2022</p>
                         <p>Web Developer / Software Engineer (student)</p>
                     </li>
                     <li>
-                        <h5>BestBuy | Roseville, MN</h5>
+                        <p>BestBuy | Roseville, MN</p>
                         <p>November 2018 - March 2021</p>
                         <p>West Coast Senior Account Executive</p>
                     </li>
                     <li>
-                        <h5>DailyHomeCare | Saint Paul, Minnesota</h5>
+                        <p>DailyHomeCare | Saint Paul, Minnesota</p>
                         <p>May 2017 - June 2020</p>
                         <p>PCA</p>
                     </li>
                     <li>
-                        <h5>Securitas | Minneapolis, Minnesota</h5>
+                        <p>Securitas | Minneapolis, Minnesota</p>
                         <p>2021-2022</p>
                         <p>Security Officer</p>
                     </li>
                     <li>
-                        <h5>Avivo Village | Minneapolis, Minnesota</h5>
+                        <p>Avivo Village | Minneapolis, Minnesota</p>
                         <p>2022—Current</p>
                         <p>Resident Advocate</p>
                     </li>
                     <li>
-                        <h5>PPL | Minneapolis, Minnesota</h5>
+                        <p>PPL | Minneapolis, Minnesota</p>
                         <p>2023-Current</p>
                         <p>Lobby Assistant</p>
                     </li>
                     <li>
-                        <h5>LivingHope | Minneapolis, Minnesota</h5>
+                        <p>LivingHope | Minneapolis, Minnesota</p>
                         <p>2023-2024</p>
                         <p>PCA</p>
                     </li>
                 </ul>
 
-                <h2><b>Skills</b></h2>
+                <h1><b>Skills</b></h1>
                 <p>
                     Javascript | React | Redux | NodeJs | Express | PostgreSQL | OAuth | Massive | Bcrypt | AWS | CSS | Git | Github | Postman | SQL Tabs | Heroku | HTML5 | Nginx | Axios | Python | SCSS
                 </p>
 
-                <h2><b>Projects</b></h2>
+                <h1><b>Projects</b></h1>
                 <div class="project">
-                    <h5>One Piece Fan Page</h5>
+                    <h2>One Piece Fan Page</h2>
                     <ul>
                         <li><a href="https://github.com/MahadAbdishakur/personal-project.git">GitHub Repo</a></li>
-                        <li>Javascript | HTML5 | NodeJS | Express | PostgreSQL | CSS</li>
-                        <li>Developed a fan page website for an anime called One Piece in commemoration of its 1000th episode.</li>
-                        <li>Provided different views - one page is dedicated to different storylines and arcs; second page dedicated to different characters.</li>
-                        <li>Introduced modal boxes to the character page, utilizing it to display additional information about selected characters.</li>
+                        <li><p>Javascript | HTML5 | NodeJS | Express | PostgreSQL | CSS</p></li>
+                        <li><p>Developed a fan page website for an anime called One Piece in commemoration of its 1000th episode.</p></li>
+                        <li><p>Provided different views - one page is dedicated to different storylines and arcs; second page dedicated to different characters.</p></li>
+                        <li><p>Introduced modal boxes to the character page, utilizing it to display additional information about selected characters.</p></li>
                     </ul>
 
-                    <h5>Capstone Project</h5>
+                    <h2>Capstone Project</h2>
                     <ul>
                         <li><a href="https://youtu.be/PD5JdCIrlRM">YouTube Demo</a></li>
-                        <li>React | HTML5 | NodeJS | Express | PostgreSQL | CSS | Javascript</li>
-                        <li>Designed a memory game using React for the first time.</li>
-                        <li>All art shown on the app was designed and created by me.</li>
-                        <li>Integrated a register and login view and added a cookie feature that automatically deletes created users in a 24-hour interval.</li>
-                        <li>Integrated a shuffle deck feature and added different decks with different themes to add replayability to the project.</li>
+                        <li><p>React | HTML5 | NodeJS | Express | PostgreSQL | CSS | Javascript</p></li>
+                        <li><p>Designed a memory game using React for the first time.</p></li>
+                        <li><p>All art shown on the app was designed and created by me.</p></li>
+                        <li><p>Integrated a register and login view and added a cookie feature that automatically deletes created users in a 24-hour interval.</p></li>
+                        <li><p>Integrated a shuffle deck feature and added different decks with different themes to add replayability to the project.</p></li>
                     </ul>
+					<h2>Weather-App</h2>
+                    <ul>
+                        <li><a href="https://www.youtube.com/watch?v=sP1-qRaZkYM">YouTube Demo</a></li>
+                        <li><p>React | HTML5 | NodeJS | Express | PostgreSQL | CSS | Javascript</p></li>
+                        <li><p>Weather app created in react over the weekend</p></li>
+						<li><p>Weather api was used.</p></li>
+                        <li><p>custom art.</p></li>
+                    </ul>
+					<h2>Explore my portfolio page for more information</h2>
                 </div>
-
-                <h2><b>Education</b></h2>
-                <h5>High School Diploma - Central High School, Saint Paul, Minnesota</h5>
-                <h5>Devmountain - Lehi, UT</h5>
+				<h1><b>Education</b></h1>
+                <h2>High School Diploma - Central High School, Saint Paul, Minnesota</h2>
+                <h2>Devmountain - Lehi, UT</h2>
                 <p>Certificate in Web Development - Graduated February 2022</p>
                 <p>Web Development Program</p>
-				<p>Front-end developer course work in HTML, CSS and some JavaScript/jQuery
-</p>
+				<p>Front-end developer course work in HTML, CSS and some JavaScript/jQuery</p>
             </div>
         </div>
-    </main>
+</main>
 <div id="home-hero12">
 	<h1>Explore my other pages!</h1>
-	</div>
+</div>
 <footer>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
-                <h4>Contact Us</h4>
+                <h4>Contact Me</h4>
                 <ul class="list-unstyled">
-                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:admin@websitedeluxe.com">admin@websitedeluxe.com</a></li>
-                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:8008675309">(800) 867-5309</a></li>
-                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:8008675309">Text Us PLEASE!</a></li>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:info@mahadabdishakur.com">info@mahadabdishakur.com</a></li>
+                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:1234567890">123-456-7890</a></li>
+                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h4>About Us</h4>
-                <p>We are a web development company based in St. Paul, Minnesota. Our mission is to deliver high-quality websites and digital solutions.</p>
+                <h4>About My Services</h4>
+                <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
             <div class="col-sm-4">
-                <h4>Follow Us</h4>
+                <h4>Follow Me</h4>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="https://www.facebook.com/GitHub/"><i class="fa fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="https://twitter.com/github?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/company/github"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.instagram.com/github/?hl=en"><i class="fa fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.facebook.com/mahadabdishakur"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="https://twitter.com/mahadabdishakur"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/mahadabdishakur/"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com/mahadabdishakur/"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -159,4 +163,4 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+</body>	
