--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
 	<meta name="description" content="i'm Mahad, a coding student, game developer, video editor and more, click for more.">
-	<title>Mahad::Resume</title>
+	<title>Mahad::Home</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<div class = "mahad">
-			<img src="artist/mahad.png" height="100px" width="300px" alt="mahad">
+			<img src="images/mahad.png" height="100px" width="300px" alt="mahad">
 		</div>
 	</header>
 	<nav>
@@ -30,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img src="artist/profile.jpg" class="img-fluid img2" alt="banner">
+                <img src="images/profile.jpg" class="img-fluid img2" alt="banner">
             </div>
             <div class="col-md-6">
                 <div class="summary">
@@ -55,18 +55,18 @@
 <div class = "photo">
 	<div class="gallery">
 		<div class="preview">
-			<img id="preview" src="artist/animal2.png" style="display:block;margin:0 auto;" alt=""  height="600" width="800"/>
+			<img id="preview" src="images/animal-2.png" style="display:block;margin:0 auto;"class="img-fluid" alt="img0"  height="600" width="800"/>
 		</div>
 		<div class="gallery-thumbnails" style="margin:0 auto;text-align:center">
-			<img onclick="document.getElementById('preview').src=document.getElementById('img1').src" id="img1" src="artist/onepiece.png" alt="" />
-			<img onclick="document.getElementById('preview').src= document.getElementById('img2').src;" id="img2" src="artist/onepiece2.png" alt=""  />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img3').src;" id="img3" src="artist/onepiece3.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img4').src;" id="img4" src=	"artist/onepiece4.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img5').src;" id="img5" src="artist/onepiece5.png" alt=""  />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img6').src;" id="img6" src="artist/animal1.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img7').src;" id="img7" src="artist/animal2.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img8').src;" id="img8" src="artist/groove1.png" alt="" />
-			<img onclick="document.getElementById('preview').src = document.getElementById('img9').src;" id="img9" src="artist/groove2.png" alt="" />
+			<img onclick="document.getElementById('preview').src=document.getElementById('img1').src" id="img1" src="images/one-piece.png"class="img-fluid" alt="img1" />
+			<img onclick="document.getElementById('preview').src= document.getElementById('img2').src;" id="img2" src="images/one-piece-2.png"class="img-fluid" alt="img2"  />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img3').src;" id="img3" src="images/one-piece-3.png"class="img-fluid" alt="img3" />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img4').src;" id="img4" src=	"images/one-piece-4.png"class="img-fluid" alt="img4" />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img5').src;" id="img5" src="images/one-piece-5.png" class="img-fluid"alt="img5"  />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img6').src;" id="img6" src="images/animal-1.png"class="img-fluid" alt="img6" />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img7').src;" id="img7" src="images/animal-2.png" class="img-fluid"alt="img7" />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img8').src;" id="img8" src="images/groove-1.png"class="img-fluid" alt="img8" />
+			<img onclick="document.getElementById('preview').src = document.getElementById('img9').src;" id="img9" src="images/groove-2.png"class="img-fluid" alt="img9" />
 		</div>
 	</div>
 </div>
@@ -75,24 +75,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
-                <h4>Contact Us</h4>
+                <h4>Contact Me</h4>
                 <ul class="list-unstyled">
-                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:admin@websitedeluxe.com">admin@websitedeluxe.com</a></li>
-                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:8008675309">(800) 867-5309</a></li>
-                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:8008675309">Text Us PLEASE!</a></li>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:info@mahadabdishakur.com">info@mahadabdishakur.com</a></li>
+                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:1234567890">123-456-7890</a></li>
+                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h4>About Us</h4>
-                <p>We are a web development company based in St. Paul, Minnesota. Our mission is to deliver high-quality websites and digital solutions.</p>
+                <h4>About My Services</h4>
+                <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
             <div class="col-sm-4">
-                <h4>Follow Us</h4>
+                <h4>Follow Me</h4>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="https://www.facebook.com/GitHub/"><i class="fa fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="https://twitter.com/github?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/company/github"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.instagram.com/github/?hl=en"><i class="fa fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.facebook.com/mahadabdishakur"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="https://twitter.com/mahadabdishakur"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/mahadabdishakur/"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com/mahadabdishakur/"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -104,7 +104,6 @@
         </div>
     </div>
 </footer>
-</main>
 <!--jQuery, Popper, and Bootstrap Javascript files-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
