--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
-	<meta name="description" content="i'm Mahad, a coding student, game developer, video editor and more, click for more.">
-	<title>Mahad::Resume</title>
+	<meta name="description" content="i'm Mahad, this is my Portfolio with some of my work im most proud of.">
+	<title>Mahad::Portfolio</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<div class = "mahad">
-			<img src="artist/mahad.png" height="100px" width="300px" alt="mahad">
+			<img src="images/mahad.png"  height="100px" width="300px" alt="mahad">
 		</div>
 	</header>
 	<nav>
@@ -23,61 +23,67 @@
 			<li><a href="portfolio.html">Portfolio</a></li>
 		</ul>
 	</nav>
-	<div id="home-hero">
-		<h1>!Welcome!</h1>
-	</div>
 </header>
- <main class="portfolio">
-      <div class="container-fluid">
-	  <h1>My Projects</h1>
-	  <h2>pssh- click the titles for the code</h2>
-        <div class="row">
-            <div class="col-md-6">
-				<a href="https://github.com/MahadAbdishakur/Puppies.git">Puppies</a>
-				<img src="artist/animal2.png" class="img-fluid img2" alt="banner">
-            </div>
-            <div class="col-md-6">
-				<a href="https://github.com/MahadAbdishakur/animals.git">Animal Photography</a>
-				<img src="artist/animal1.png" class="img-fluid img2" alt="banner">
-            </div>
-			<div class="col-md-6">
-				<a href="https://github.com/MahadAbdishakur/grooveguitar.git">Groove Guitar</a>
-				<img src="artist/groove1.png" class="img-fluid img2" alt="banner">
-            </div>
-			<div class="col-md-6">
-				<a href="https://github.com/MahadAbdishakur/personal-project.git">Personal project</a>
-				<img src="artist/onepiece.png" class="img-fluid img2" alt="banner">
-            </div>
-        </div>
-        </div>
-        </div>
+<main class="portfolio">
+	<div class="container-fluid">
+		<h1>My Projects</h1>
+		<h2>pssh- click the titles for the code</h2>
+			<div class="row">
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/Puppies.git" class ="links">Puppies</a>
+					<img src="images/animal-2.png" class="img-fluid img2" alt="banner">
+				</div>
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/animals.git" class ="links">Animal Photography</a>
+					<img src="images/animal-1.png" class="img-fluid img2" alt="banner">
+				</div>
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/grooveguitar.git" class ="links">Groove Guitar</a>
+					<img src="images/groove-1.png" class="img-fluid img2" alt="banner">
+				</div>
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/personal-project.git" class ="links">Personal project</a>
+					<img src="images/one-piece.png" class="img-fluid img2" alt="banner">
+					<a href="https://www.youtube.com/watch?v=IUjtIn9q2qY"><br>(click me im a video)</a>
+				</div>
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/magic-memory" class ="links">Magic Memory</a>
+					<img src="images/card.png" class="img-fluid img2" alt="banner">
+					<a href="https://www.youtube.com/watch?v=PD5JdCIrlRM&t=104s"><br>(click me im a video)</a>
+				</div>
+				<div class="col-md-6">
+					<a href="https://github.com/MahadAbdishakur/weatherApp" class ="links">WeatherApp</a>
+					<img src="images/weather.png" class="img-fluid img2" alt="banner">
+					<a href="https://www.youtube.com/watch?v=sP1-qRaZkYM"><br>(click me im a video)</a>
+				</div>
+			</div>
     </div>
-    </main>
+</main>
 <div id="home-hero12">
 	<h1>Explore my other pages!</h1>
-	</div>
+</div>
 <footer>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
-                <h4>Contact Us</h4>
+                <h4>Contact Me</h4>
                 <ul class="list-unstyled">
-                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:admin@websitedeluxe.com">admin@websitedeluxe.com</a></li>
-                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:8008675309">(800) 867-5309</a></li>
-                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:8008675309">Text Us PLEASE!</a></li>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:info@mahadabdishakur.com">info@mahadabdishakur.com</a></li>
+                    <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:1234567890">123-456-7890</a></li>
+                    <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h4>About Us</h4>
-                <p>We are a web development company based in St. Paul, Minnesota. Our mission is to deliver high-quality websites and digital solutions.</p>
+                <h4>About My Services</h4>
+                <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
             <div class="col-sm-4">
-                <h4>Follow Us</h4>
+                <h4>Follow Me</h4>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="https://www.facebook.com/GitHub/"><i class="fa fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="https://twitter.com/github?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/company/github"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.instagram.com/github/?hl=en"><i class="fa fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.facebook.com/mahadabdishakur"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="https://twitter.com/mahadabdishakur"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/mahadabdishakur/"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com/mahadabdishakur/"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
