--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
 		</div>
 	</div>
 </div>
-
+    <!-- Footer navigation -->
 <footer>
     <div class="container-fluid">
         <div class="row">
+		 <!-- Contact information -->
             <div class="col-sm-4">
                 <h4>Contact Me</h4>
                 <ul class="list-unstyled">
@@ -82,10 +83,12 @@
                     <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
+			 <!-- About services -->
             <div class="col-sm-4">
                 <h4>About My Services</h4>
                 <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
+			  <!-- Social media links -->
             <div class="col-sm-4">
                 <h4>Follow Me</h4>
                 <ul class="list-inline">
@@ -96,6 +99,7 @@
                 </ul>
             </div>
         </div>
+		<!-- Copyright information -->
         <div class="row">
             <div class="col-sm-12 text-center">
                 <hr>
@@ -109,4 +113,4 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+</body>	
