--- a/portfolio.html
+++ b/portfolio.html
@@ -62,9 +62,11 @@
 <div id="home-hero12">
 	<h1>Explore my other pages!</h1>
 </div>
+    <!-- Footer navigation -->
 <footer>
     <div class="container-fluid">
         <div class="row">
+		 <!-- Contact information -->
             <div class="col-sm-4">
                 <h4>Contact Me</h4>
                 <ul class="list-unstyled">
@@ -73,10 +75,12 @@
                     <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
+			 <!-- About services -->
             <div class="col-sm-4">
                 <h4>About My Services</h4>
                 <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
+			  <!-- Social media links -->
             <div class="col-sm-4">
                 <h4>Follow Me</h4>
                 <ul class="list-inline">
@@ -87,6 +91,7 @@
                 </ul>
             </div>
         </div>
+		<!-- Copyright information -->
         <div class="row">
             <div class="col-sm-12 text-center">
                 <hr>
@@ -100,4 +105,4 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+</body>	
