--- a/resume.html
+++ b/resume.html
@@ -5,17 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
 	<meta name="description" content="i'm Mahad, this is my resume page, outlining my schooling, extra schooling, projects and past jobs">
 	<title>Mahad::Resume</title>
+	<!-- External CSS libraries -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+	 <!-- Custom CSS -->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
+	        <!-- Logo -->
+
 		<div class = "mahad">
 			<img src="images/mahad.png" height="100px" width="300px" alt="mahad">
 		</div>
 	</header>
 	<nav>
+	<!-- Navigation links -->
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="resume.html">Resume</a></li>
@@ -38,7 +43,7 @@
                 <p>
                     I am a full-time student with two jobs, seeking a paid internship in web development. I am available part-time immediately and full-time in 2025. I have studied computer science and web development and have participated in a bootcamp.
                 </p>
-
+					  <!-- Job experiences -->
                 <h1><b>Professional Experience</b></h1>
                 <ul>
                     <li>
@@ -77,12 +82,12 @@
                         <p>PCA</p>
                     </li>
                 </ul>
-
+					<!-- Skills -->
                 <h1><b>Skills</b></h1>
                 <p>
                     Javascript | React | Redux | NodeJs | Express | PostgreSQL | OAuth | Massive | Bcrypt | AWS | CSS | Git | Github | Postman | SQL Tabs | Heroku | HTML5 | Nginx | Axios | Python | SCSS
                 </p>
-
+				 <!-- Project details -->
                 <h1><b>Projects</b></h1>
                 <div class="project">
                     <h2>One Piece Fan Page</h2>
@@ -113,6 +118,7 @@
                     </ul>
 					<h2>Explore my portfolio page for more information</h2>
                 </div>
+				  <!-- Education -->
 				<h1><b>Education</b></h1>
                 <h2>High School Diploma - Central High School, Saint Paul, Minnesota</h2>
                 <h2>Devmountain - Lehi, UT</h2>
@@ -125,9 +131,11 @@
 <div id="home-hero12">
 	<h1>Explore my other pages!</h1>
 </div>
+    <!-- Footer navigation -->
 <footer>
     <div class="container-fluid">
         <div class="row">
+		 <!-- Contact information -->
             <div class="col-sm-4">
                 <h4>Contact Me</h4>
                 <ul class="list-unstyled">
@@ -136,10 +144,12 @@
                     <li><i class="fa fa-commenting-o" aria-hidden="true"></i> <a href="sms:1234567890">Text Me Please!</a></li>
                 </ul>
             </div>
+			 <!-- About services -->
             <div class="col-sm-4">
                 <h4>About My Services</h4>
                 <p>I provide professional web development services tailored to meet your business needs. From simple websites to complex web applications, I deliver high-quality solutions that drive results.</p>
             </div>
+			  <!-- Social media links -->
             <div class="col-sm-4">
                 <h4>Follow Me</h4>
                 <ul class="list-inline">
@@ -150,6 +160,7 @@
                 </ul>
             </div>
         </div>
+		<!-- Copyright information -->
         <div class="row">
             <div class="col-sm-12 text-center">
                 <hr>
